Aggiunta la classe "merge" e spostato il codice presente nel pulsante merge nella classe. Aggiunta la classe "compress" e spostato il codice presente nel pulsante compress nella classe. Questo per rendere più pulito e leggile il codice.

--- a/UtilityPDF/UtilityPDF.csproj
+++ b/UtilityPDF/UtilityPDF.csproj
@@ -143,12 +143,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compress.cs" />
+    <Compile Include="DisplayError.cs" />
     <Compile Include="FrmUtiPDF_Main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmUtiPDF_Main.Designer.cs">
       <DependentUpon>FrmUtiPDF_Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Merge.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmUtiPDF_Main.resx">
