Tutto il testo del progetto (label, pulsanti, messaggi, ecc) sono stati spostati nei settings dell'applicazione così da poter essere modificati velocemente.

--- a/UtilityPDF/App.config
+++ b/UtilityPDF/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="UtilityPDF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
@@ -59,4 +64,110 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <UtilityPDF.Properties.Settings>
+      <setting name="CompressCompleted" serializeAs="String">
+        <value>Compress &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</value>
+      </setting>
+      <setting name="CompressLvl_0" serializeAs="String">
+        <value>VERY LOW COMPRESS --&gt; MAX QUALITY</value>
+      </setting>
+      <setting name="CompressLvl_1" serializeAs="String">
+        <value>LOW COMPRESS --&gt; HIGH QUALITY</value>
+      </setting>
+      <setting name="CompressLvl_2" serializeAs="String">
+        <value>MEDIUM COMPRESS --&gt; MEDIUM QUALITY</value>
+      </setting>
+      <setting name="CompressLvl_3" serializeAs="String">
+        <value>HIGH COMPRESS --&gt; LOW QUALITY</value>
+      </setting>
+      <setting name="ConvertAborted" serializeAs="String">
+        <value>Convert &gt;&gt;&gt; ABORTED &lt;&lt;&lt; !!!</value>
+      </setting>
+      <setting name="ConvertCompleted" serializeAs="String">
+        <value>Convert &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</value>
+      </setting>
+      <setting name="GenericMessageError" serializeAs="String">
+        <value>An error occurred: </value>
+      </setting>
+      <setting name="LblCompressInProgress" serializeAs="String">
+        <value>Compress PDF in progress...</value>
+      </setting>
+      <setting name="LblCompressionLvl" serializeAs="String">
+        <value>Compression LEVEL</value>
+      </setting>
+      <setting name="LblMergeInProgress" serializeAs="String">
+        <value>Merge PDF in progress...</value>
+      </setting>
+      <setting name="LblMsgInputPDF_Extr" serializeAs="String">
+        <value>PDF file from EXTRACT TEXT</value>
+      </setting>
+      <setting name="LblMsgOutputDIR_Extr" serializeAs="String">
+        <value>Directory Output TXT File</value>
+      </setting>
+      <setting name="LblMsgOutputDIR_Merge" serializeAs="String">
+        <value>Directory Output Merged PDF</value>
+      </setting>
+      <setting name="LblMsgSelLang" serializeAs="String">
+        <value>Select the language that OCR should use for extraction</value>
+      </setting>
+      <setting name="LblPanelCompress" serializeAs="String">
+        <value>Compress PDF</value>
+      </setting>
+      <setting name="LblPanelExtract" serializeAs="String">
+        <value>Extract Text From PDF Using OCR</value>
+      </setting>
+      <setting name="LblPanelMerge" serializeAs="String">
+        <value>Merge PDF</value>
+      </setting>
+      <setting name="MergeCompleted" serializeAs="String">
+        <value>Merge &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</value>
+      </setting>
+      <setting name="SpecificMessageErrorIO" serializeAs="String">
+        <value>An IO error occurred: </value>
+      </setting>
+      <setting name="TxtAbortBtn" serializeAs="String">
+        <value>Abort</value>
+      </setting>
+      <setting name="TxtCompressBtn" serializeAs="String">
+        <value>Compress</value>
+      </setting>
+      <setting name="TxtExitBtn" serializeAs="String">
+        <value>Exit</value>
+      </setting>
+      <setting name="TxtExtractBtn" serializeAs="String">
+        <value>Extract</value>
+      </setting>
+      <setting name="TxtMergetBtn" serializeAs="String">
+        <value>Merge</value>
+      </setting>
+      <setting name="TxtOutputDirBtn" serializeAs="String">
+        <value>Select DIR </value>
+      </setting>
+      <setting name="TxtResetBtn" serializeAs="String">
+        <value>Reset</value>
+      </setting>
+      <setting name="TxtSelectPDFBtn" serializeAs="String">
+        <value>Select PDF</value>
+      </setting>
+      <setting name="WarnConfirmAbort" serializeAs="String">
+        <value>Do you confirm extraction &gt;&gt;&gt; ABORT &lt;&lt;&lt; ?</value>
+      </setting>
+      <setting name="WarnSelectOutDirCOMP" serializeAs="String">
+        <value>If a PDF file with the same name already exists (OUTPUT file will have the SAME NAME_COMPRESSED as the selected PDF file) in the folder you select, it will be overwritten!!!</value>
+      </setting>
+      <setting name="WarnSelectOutDirMERGE" serializeAs="String">
+        <value>If a PDF file with the same name already exists (PDF_MERGED file will have the SAME NAME + MERGED as the first selected PDF file) in the folder you select, it will be overwritten!!!</value>
+      </setting>
+      <setting name="WarnSelectOutDirTXT" serializeAs="String">
+        <value>If a TXT file with the same name already exists (TXT file will have the SAME NAME as the selected PDF file) in the folder you select, it will be overwritten!!!</value>
+      </setting>
+      <setting name="InfoCompleteExtraction" serializeAs="String">
+        <value>Convert &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</value>
+      </setting>
+      <setting name="WarnAbortedExtraction" serializeAs="String">
+        <value>Convert &gt;&gt;&gt; ABORTED &lt;&lt;&lt; !!!</value>
+      </setting>
+    </UtilityPDF.Properties.Settings>
+  </applicationSettings>
 </configuration>
