Rimosso la classe resources. Ora viene utilizzata la classe settings così da permettere all'utente di cambiare il testo a tutta l'applicazione. Aggiunto pannello per l'estrazione da pdf a docx.

--- a/UtilityPDF/App.config
+++ b/UtilityPDF/App.config
@@ -81,12 +81,6 @@
       <setting name="CompressLvl_3" serializeAs="String">
         <value>HIGH COMPRESS --&gt; LOW QUALITY</value>
       </setting>
-      <setting name="ConvertAborted" serializeAs="String">
-        <value>Convert &gt;&gt;&gt; ABORTED &lt;&lt;&lt; !!!</value>
-      </setting>
-      <setting name="ConvertCompleted" serializeAs="String">
-        <value>Convert &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</value>
-      </setting>
       <setting name="GenericMessageError" serializeAs="String">
         <value>An error occurred: </value>
       </setting>
@@ -160,13 +154,31 @@
         <value>If a PDF file with the same name already exists (PDF_MERGED file will have the SAME NAME + MERGED as the first selected PDF file) in the folder you select, it will be overwritten!!!</value>
       </setting>
       <setting name="WarnSelectOutDirTXT" serializeAs="String">
-        <value>If a TXT file with the same name already exists (TXT file will have the SAME NAME as the selected PDF file) in the folder you select, it will be overwritten!!!</value>
+        <value>If a TXT file with the same name already exists (TXT file will have the SAME NAME.TXT as the selected PDF file) in the folder you select, it will be overwritten!!!</value>
       </setting>
       <setting name="InfoCompleteExtraction" serializeAs="String">
-        <value>Convert &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</value>
+        <value>Extraction &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</value>
       </setting>
       <setting name="WarnAbortedExtraction" serializeAs="String">
-        <value>Convert &gt;&gt;&gt; ABORTED &lt;&lt;&lt; !!!</value>
+        <value>Extraction &gt;&gt;&gt; ABORTED &lt;&lt;&lt; !!!</value>
+      </setting>
+      <setting name="trainerDataFolder" serializeAs="String">
+        <value>tessdata</value>
+      </setting>
+      <setting name="csvLangFilename" serializeAs="String">
+        <value>lang.csv</value>
+      </setting>
+      <setting name="LblPanelConvDOCX" serializeAs="String">
+        <value>Convert PDF to DOCX</value>
+      </setting>
+      <setting name="TxtConvertBtn" serializeAs="String">
+        <value>Convert</value>
+      </setting>
+      <setting name="LblConvertInProgress" serializeAs="String">
+        <value>Convert PDF in progress...</value>
+      </setting>
+      <setting name="WarnSelectOutDirDOCX" serializeAs="String">
+        <value>If a DOCX file with the same name already exists (DOCX file will have the SAME NAME_CONVERT.DOCX as the selected PDF file) in the folder you select, it will be overwritten!!!</value>
       </setting>
     </UtilityPDF.Properties.Settings>
   </applicationSettings>
