--- a/UtilityPDF/Properties/Settings.settings
+++ b/UtilityPDF/Properties/Settings.settings
@@ -17,12 +17,6 @@
     <Setting Name="CompressLvl_3" Type="System.String" Scope="Application">
       <Value Profile="(Default)">HIGH COMPRESS --&gt; LOW QUALITY</Value>
     </Setting>
-    <Setting Name="ConvertAborted" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Convert &gt;&gt;&gt; ABORTED &lt;&lt;&lt; !!!</Value>
-    </Setting>
-    <Setting Name="ConvertCompleted" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Convert &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</Value>
-    </Setting>
     <Setting Name="GenericMessageError" Type="System.String" Scope="Application">
       <Value Profile="(Default)">An error occurred: </Value>
     </Setting>
@@ -96,13 +90,31 @@
       <Value Profile="(Default)">If a PDF file with the same name already exists (PDF_MERGED file will have the SAME NAME + MERGED as the first selected PDF file) in the folder you select, it will be overwritten!!!</Value>
     </Setting>
     <Setting Name="WarnSelectOutDirTXT" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">If a TXT file with the same name already exists (TXT file will have the SAME NAME as the selected PDF file) in the folder you select, it will be overwritten!!!</Value>
+      <Value Profile="(Default)">If a TXT file with the same name already exists (TXT file will have the SAME NAME.TXT as the selected PDF file) in the folder you select, it will be overwritten!!!</Value>
     </Setting>
     <Setting Name="InfoCompleteExtraction" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Convert &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</Value>
+      <Value Profile="(Default)">Extraction &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</Value>
     </Setting>
     <Setting Name="WarnAbortedExtraction" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Convert &gt;&gt;&gt; ABORTED &lt;&lt;&lt; !!!</Value>
+      <Value Profile="(Default)">Extraction &gt;&gt;&gt; ABORTED &lt;&lt;&lt; !!!</Value>
+    </Setting>
+    <Setting Name="trainerDataFolder" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">tessdata</Value>
+    </Setting>
+    <Setting Name="csvLangFilename" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">lang.csv</Value>
+    </Setting>
+    <Setting Name="LblPanelConvDOCX" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Convert PDF to DOCX</Value>
+    </Setting>
+    <Setting Name="TxtConvertBtn" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Convert</Value>
+    </Setting>
+    <Setting Name="LblConvertInProgress" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Convert PDF in progress...</Value>
+    </Setting>
+    <Setting Name="WarnSelectOutDirDOCX" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">If a DOCX file with the same name already exists (DOCX file will have the SAME NAME_CONVERT.DOCX as the selected PDF file) in the folder you select, it will be overwritten!!!</Value>
     </Setting>
   </Settings>
 </SettingsFile>
