Create una classe separata per l'assegnazione del testo o delle immagini ai vari controlli presenti nella form.

--- a/UtilityPDF/App.config
+++ b/UtilityPDF/App.config
@@ -103,7 +103,7 @@
         <value>Directory Output Merged PDF</value>
       </setting>
       <setting name="LblMsgSelLang" serializeAs="String">
-        <value>Select the language that OCR should use for extraction</value>
+        <value>Select the language that OCR use</value>
       </setting>
       <setting name="LblPanelCompress" serializeAs="String">
         <value>Compress PDF</value>
