Aggiunta la libreria iText7 e la libreria DocumentFormat.OpenXml per la conversione del pdf in docx. La conversione è "basica" non tiene conto di formatazzioni, stili, font ecc. ecc. Il docx di output comunque contiene il testo ed eventuali immagini

--- a/UtilityPDF/App.config
+++ b/UtilityPDF/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="UtilityPDF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -61,6 +61,14 @@
       <dependentAssembly>
         <assemblyIdentity name="itext.layout" publicKeyToken="8354ae6d2174ddca" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.4.0" newVersion="8.0.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="PdfSharp" publicKeyToken="f94615aa0424f9eb" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.1.1.0" newVersion="6.1.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Drawing.Common" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -179,6 +187,9 @@
       </setting>
       <setting name="WarnSelectOutDirDOCX" serializeAs="String">
         <value>If a DOCX file with the same name already exists (DOCX file will have the SAME NAME_CONVERT.DOCX as the selected PDF file) in the folder you select, it will be overwritten!!!</value>
+      </setting>
+      <setting name="ConvertCompleted" serializeAs="String">
+        <value>Convert &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</value>
       </setting>
     </UtilityPDF.Properties.Settings>
   </applicationSettings>
