Aggiunte al progetto le risorse necessarie al funzionamento in quanto, in fase di pubblicazione, alcune dipendenze non venivano aggiunte. Aggiunto al progetto il file readme.md, license.txt e la cartella tessdata. Rimossa la libreria iText7 ed aggiunta la libreria Freeware.Pdf2Docx per convertire il PDF, nella sua interezza e mantenendo la struttura, in un file word. Inoltre è stata aggiunta la possibilità di convertire il pdf nel formato RTF. Per questa conversione è stata utilizzata la libreria FreeSpire.Doc (liberamente utilizzabile per uso privato e commerciale anche se con qualche limitazione ma a noi serve solo per convertire il docx in rtf senza avere office installato).

--- a/UtilityPDF/App.config
+++ b/UtilityPDF/App.config
@@ -70,6 +70,42 @@
         <assemblyIdentity name="System.Drawing.Common" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Text.Encoding.CodePages" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ExtendedNumerics.BigDecimal" publicKeyToken="65f1315a45ad8949" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2025.1003.0.225" newVersion="2025.1003.0.225" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IO.RecyclableMemoryStream" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Enums.NET" publicKeyToken="7ea1c1650d506225" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ICSharpCode.SharpZipLib" publicKeyToken="1b03e6acf1164f73" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.3.11" newVersion="1.3.3.11" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.8.10.0" newVersion="1.8.10.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <applicationSettings>
@@ -159,7 +195,7 @@
         <value>If a PDF file with the same name already exists (OUTPUT file will have the SAME NAME_COMPRESSED as the selected PDF file) in the folder you select, it will be overwritten!!!</value>
       </setting>
       <setting name="WarnSelectOutDirMERGE" serializeAs="String">
-        <value>If a PDF file with the same name already exists (PDF_MERGED file will have the SAME NAME + MERGED as the first selected PDF file) in the folder you select, it will be overwritten!!!</value>
+        <value>If a PDF file with the same name already exists (PDF_MERGED file will have the SAME NAME_MERGED as the first selected PDF file) in the folder you select, it will be overwritten!!!</value>
       </setting>
       <setting name="WarnSelectOutDirTXT" serializeAs="String">
         <value>If a TXT file with the same name already exists (TXT file will have the SAME NAME.TXT as the selected PDF file) in the folder you select, it will be overwritten!!!</value>
@@ -177,7 +213,7 @@
         <value>lang.csv</value>
       </setting>
       <setting name="LblPanelConvDOCX" serializeAs="String">
-        <value>Convert PDF to DOCX</value>
+        <value>Convert PDF to DOCX/RTF</value>
       </setting>
       <setting name="TxtConvertBtn" serializeAs="String">
         <value>Convert</value>
@@ -186,10 +222,25 @@
         <value>Convert PDF in progress...</value>
       </setting>
       <setting name="WarnSelectOutDirDOCX" serializeAs="String">
-        <value>If a DOCX file with the same name already exists (DOCX file will have the SAME NAME_CONVERT.DOCX as the selected PDF file) in the folder you select, it will be overwritten!!!</value>
+        <value>If a DOCX/RTF file with the same name already exists (DOCX/RTF file will have the SAME NAME_CONVERT.DOCX/RTF as the selected PDF file) in the folder you select, it will be overwritten!!!</value>
       </setting>
       <setting name="ConvertCompleted" serializeAs="String">
         <value>Convert &gt;&gt;&gt; COMPLETED &lt;&lt;&lt;</value>
+      </setting>
+      <setting name="RdBtnOutFormat_2" serializeAs="String">
+        <value>DOCX and RTF</value>
+      </setting>
+      <setting name="RdBtnOutFormat_0" serializeAs="String">
+        <value>Only DOCX</value>
+      </setting>
+      <setting name="RdBtnOutFormat_1" serializeAs="String">
+        <value>Only RTF</value>
+      </setting>
+      <setting name="LblMsgInputPDF_Conv" serializeAs="String">
+        <value>PDF file to DOCX/RTF CONVERT</value>
+      </setting>
+      <setting name="LblMsgOutputDIR_Conv" serializeAs="String">
+        <value>Directory Output DOCX/RTF</value>
       </setting>
     </UtilityPDF.Properties.Settings>
   </applicationSettings>
