--- a/UtilityPDF/packages.config
+++ b/UtilityPDF/packages.config
@@ -1,26 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DocumentFormat.OpenXml" version="3.1.0" targetFramework="net48" />
-  <package id="DocumentFormat.OpenXml.Framework" version="3.1.0" targetFramework="net48" />
+  <package id="FreeSpire.Doc" version="12.2.0" targetFramework="net48" />
+  <package id="Freeware.Pdf2Docx" version="1.1.0" targetFramework="net48" />
   <package id="Freeware.Pdf2Png" version="1.0.1" targetFramework="net48" />
   <package id="Ghostscript.NET" version="1.2.3.1" targetFramework="net48" />
-  <package id="itext" version="8.0.5" targetFramework="net48" />
-  <package id="itext.commons" version="8.0.5" targetFramework="net48" />
-  <package id="itext7" version="8.0.5" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.1" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.1" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
+  <package id="HarfBuzzSharp" version="7.3.0.2" targetFramework="net48" />
+  <package id="HarfBuzzSharp.NativeAssets.macOS" version="7.3.0.2" targetFramework="net48" />
+  <package id="HarfBuzzSharp.NativeAssets.Win32" version="7.3.0.2" targetFramework="net48" />
   <package id="PDFsharp" version="6.1.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="Tesseract" version="5.2.0" targetFramework="net48" />
 </packages>
